--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  
 }
 
 .App-link {
@@ -35,4 +36,75 @@
   to {
     transform: rotate(360deg);
   }
+
+}
+
+
+/* .exchangeCard{ 
+  padding: 2rem;
+  background-color: rgb(11, 151, 121);
+  margin: .5rem;
+  font-weight: 1000;
+  border-radius: .25rem;
+  
+} */
+
+
+/* .float-child {
+  width: 50%;
+  float: left;
+  padding: 20px;
+  border: 2px solid red;
+}   */
+
+/* .float-container  {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1px;
+  padding: 2rem;
+  background-color: rgb(11, 151, 121);
+  margin: .5rem;
+  font-weight: 1000;
+  border-radius: .25rem;
+  max-width: 20rem;
+  
+}
+.image-container {
+  display: inline-block;
+  
+  
+} */
+.cardContainer{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 1.5rem;
+}
+/* .cardImage{
+  height: 50px;
+  width: 50px;
+} */
+.title{
+  font-size: x-large;
+  font-weight: 1000;
+}
+.navbar{
+    background-color: #82d318; 
+  
+}
+.home{
+  font-weight:1000;
+}
+.cardExchange {
+  max-width: 540px;
+}
+.exchangeCard {
+  display: flex;
+  justify-content: center;
+  margin-top: 1.75rem;
+}
+.socialLink{
+  height: 30px;
+  width: 30px;
+  margin: 4px;
 }
